# napari-nwb

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_nwb/: _reader.py  napari.yaml
src/napari_nwb/_tests/: test_reader.py  test_sample_data.py  test_writer.py
