[metadata]
name = napari-nwb
version = 0.0.1
description = A simple plugin to read NWB files within Napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alessandrofelder/napari-nwb
author = Alessandro Felder
author_email = a.felder@ucl.ac.uk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/alessandrofelder/napari-nwb/issues
    Documentation = https://github.com/alessandrofelder/napari-nwb#README.md
    Source Code = https://github.com/alessandrofelder/napari-nwb
    User Support = https://github.com/alessandrofelder/napari-nwb/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-nwb = napari_nwb:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
